NetBSD Problem Report #40097

From bouyer@antioche.lip6.fr  Wed Dec  3 14:44:12 2008
Return-Path: <bouyer@antioche.lip6.fr>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 5006F63B8BD
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  3 Dec 2008 14:44:12 +0000 (UTC)
Message-Id: <200812031444.mB3Ei9wu028586@armandeche.lip6.fr>
Date: Wed, 3 Dec 2008 15:44:09 +0100 (MET)
From: Manuel Bouyer <bouyer@antioche.lip6.fr>
Reply-To: bouyer@antioche.lip6.fr
To: gnats-bugs@gnats.NetBSD.org
Subject: MODULAR tries to unload non-module subsystems
X-Send-Pr-Version: 3.95

>Number:         40097
>Category:       kern
>Synopsis:       MODULAR tries to unload non-module subsystems
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Dec 03 14:45:00 +0000 2008
>Closed-Date:    Fri Jan 23 03:15:58 +0000 2009
>Last-Modified:  Fri Jan 23 03:15:58 +0000 2009
>Originator:     bouyer@antioche.lip6.fr
>Release:        NetBSD 5.99.3
>Organization:
>Environment:
System: NetBSD tzigane.soc.lip6.fr 5.99.3 NetBSD 5.99.3 (XEN3_DOMU) #3: Fri Nov 28 13:03:11 CET 2008  bouyer@roll:/dsk/l1/misc/bouyer/tmp/amd64/obj/dsk/l1/misc/bouyer/current/src/sys/arch/amd64/compile/XEN3_DOMU amd64
Architecture: amd64
Machine: amd64
>Description:
	a kernel with options MODULAR but some systems compiled in kernel
	(typically a xen kernel) gets is console spammed with
WARNING: module error: module `cd9660' busy
WARNING: module error: module `coda' busy
WARNING: module error: module `ffs' busy
WARNING: module error: module `fdesc' busy
WARNING: module error: module `kernfs' busy
WARNING: module error: module `msdosfs' busy
WARNING: module error: module `nfs' busy
WARNING: module error: module `ntfs' busy
WARNING: module error: module `nullfs' busy
WARNING: module error: module `overlay' busy

	when memory becomes low. This eats a lot of system time ...

>How-To-Repeat:
	boot a default Xen kernel, run a memory-heavy program
>Fix:
	don't try to unload things that have been compiled in statically.

>Release-Note:

>Audit-Trail:
From: Christos Zoulas <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40097 CVS commit: src/sys/kern
Date: Wed,  3 Dec 2008 15:15:01 +0000 (UTC)

 Module Name:	src
 Committed By:	christos
 Date:		Wed Dec  3 15:15:01 UTC 2008

 Modified Files:
 	src/sys/kern: kern_module.c

 Log Message:
 PR/40097: bouyer@antioche.lip6.fr: MODULAR tries to unload non-module subsystems
 Don't try to unload built-in modules, and if a module is busy don't retry
 immediately.


 To generate a diff of this commit:
 cvs rdiff -r1.34 -r1.35 src/sys/kern/kern_module.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Tue, 20 Jan 2009 16:54:33 +0000
State-Changed-Why:
Fixed?


From: Manuel Bouyer <bouyer@antioche.eu.org>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@NetBSD.org, netbsd-bugs@NetBSD.org, gnats-admin@NetBSD.org,
        dholland@NetBSD.org
Subject: Re: kern/40097 (MODULAR tries to unload non-module subsystems)
Date: Tue, 20 Jan 2009 18:08:39 +0100

 On Tue, Jan 20, 2009 at 04:54:34PM +0000, dholland@NetBSD.org wrote:
 > Synopsis: MODULAR tries to unload non-module subsystems
 > 
 > State-Changed-From-To: open->feedback
 > State-Changed-By: dholland@NetBSD.org
 > State-Changed-When: Tue, 20 Jan 2009 16:54:33 +0000
 > State-Changed-Why:
 > Fixed?

 I think so, I've not seen the message recently.

 -- 
 Manuel Bouyer <bouyer@antioche.eu.org>
      NetBSD: 26 ans d'experience feront toujours la difference
 --

State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Fri, 23 Jan 2009 03:15:58 +0000
State-Changed-Why:
Fixed. (we think)


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.