PR/40097: bouyer@antioche.lip6.fr: MODULAR tries to unload non-module subsystems Don't try to unload built-in modules, and if a module is busy don't retry immediately.